[package]
name = "connman"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
argh = "0.1.12"
bollard = "0.15.0"
env_logger = "0.10.0"
fern = "0.6.2"
futures-util = "0.3.29"
highway = "1.1.0"
log = "0.4.20"
pin-project = "1.1.3"
rand = "0.8.5"
rustls-pemfile = "1.0.3"
rustls-pki-types = "0.2.1"
rustls-webpki = "0.101.7"
socket2 = "0.5.5"
tokio = { version = "1", features = ["full"] }
tokio-io-timeout = "1.2.0"
tokio-rustls = "0.24.1"
