[package]
name = "connman"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
argh = "0.1.12"
bollard = "0.15.0"
crossterm = "0.27.0"
env_logger = "0.10.0"
fern = "0.6.2"
futures-util = "0.3.29"
highway = "1.1.0"
log = "0.4.20"
pin-project = "1.1.3"
prost = "0.12.4"
rand = "0.8.5"
rand_chacha = "0.3.1"
ratatui = "0.26.3"
rusqlite = "0.31.0"
rustls-pemfile = "1.0.3"
rustls-pki-types = "0.2.1"
rustls-webpki = "0.101.7"
serde = "1.0.203"
serde_json = "1.0.117"
socket2 = "0.5.5"
tokio = { version = "1", features = ["full"] }
tokio-io-timeout = "1.2.0"
tokio-rustls = "0.24.1"
tokio-util = "0.7.11"
tonic = "0.11.0"
tracing = "0.1.40"
tui-logger = { version = "0.11.1", features = ["tracing", "crossterm"] }

[build-dependencies]
tonic-build = "0.11.0"
